# Odometry-Vis

./: .gitignore  .gitmodules  CMakeLists.txt  DataGen.h  Readme.md  TrajectoryView.h  Vis.cpp  Vis.h  VisScreen.cpp  VisScreen.h  buildrun.sh  library.cpp  library.h  main.cpp  main.h  nanoVtkCanvas.h  trajectoryView.h  vtk_struggle.md
docs/: work_structure.xml
include/: Constants.h  DataGen.h  Keyframe.h  KittiImport.h  MockCameraInput.h  TrajectoryView.h  Vis.h  data_types.h
src/: CMakeLists.txt  DataGen.cpp  DataGen.h  Keyframe.cpp  Keyframe.h  MockCameraInput.cpp  TrajectoryView.h  Vis.cpp  Vis.h  VisScreen.cpp  data_types.h  main.cpp  pseudo.py
